[package]
name = "deanonro"
description = "Deanonymization of the Dero network"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/kayabaNerve/deanonro"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]

[dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"

# bn254
num-traits = "0.2"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"

# Used to convert addresses to their keys
bech32 = "0.11"

# Used to derive secrets
tiny-keccak = { version = "2", features = ["keccak"] }
chacha20 = "0.9"

# Used to decrypt the payload
cbor4ii = { version = "0.3", features = ["use_alloc"] }
